--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Request A call back
+          Request A call back To Me
         </h2>
       </div>
       <div class="row">
@@ -168,7 +168,7 @@
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      Copyright &copy; 2020 All Rights Reserved. Design by
+      Copyright &copy; 2023 All Rights Reserved. Design by
       <a href="https://html.design/">Free Html Templates</a>
     </p>
   </footer>
